--- a/ecourseapiv1/courses/templates/admin/base.html
+++ b/ecourseapiv1/courses/templates/admin/base.html
@@ -1,6 +1,6 @@
 {% load i18n static %}<!DOCTYPE html>
 {% get_current_language as LANGUAGE_CODE %}{% get_current_language_bidi as LANGUAGE_BIDI %}
-<html lang="{{ LANGUAGE_CODE|default:" en-us" }}" dir="{{ LANGUAGE_BIDI|yesno:'rtl,ltr,auto' }}">
+<html lang="{{ LANGUAGE_CODE|default:" "en-us" }}" dir="{{ LANGUAGE_BIDI|yesno:'rtl,ltr,auto' }}">
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% block stylesheet %}{% static " admin/css/base.css" %}{% endblock %}">
@@ -65,6 +65,9 @@
                 <button type="submit">{% translate 'Log out' %}</button>
             </form>
             {% include "admin/color_theme_toggle.html" %}
+            {% if stats_url %}
+            <a href="{{ stats_url }}">{% translate 'Stats' %}</a> /
+            {% endif %}
             {% endblock %}
         </div>
         {% endif %}
